--- a/frontend/src/components/GenericButton/styles.css
+++ b/frontend/src/components/GenericButton/styles.css
@@ -7,7 +7,7 @@ height: 82px;
 color: white; 
 background-color:#B65854;
 border-radius: 25px;
-bottom: 7.32%;
+/* bottom: 7.32%; */
 border: none; 
 font-size: 36px; 
 
