--- a/frontend/src/components/GenericButton/styles.css
+++ b/frontend/src/components/GenericButton/styles.css
@@ -1,22 +1,24 @@
 /* button */
 
 .g-button {
-width: 304px;
-height: 82px;
-color: white; 
-background-color: #EB966F;
-border-radius: 25px;
-border: none; 
-font-size: 36px; 
-box-shadow: 5px 5px #C3B2AE;
-margin: 10px;
-outline: none;
+  width: 304px;
+  height: 82px;
+  color: #e68977;
+  background-color: white;
+  border-radius: 25px;
+  border: none;
+  font-size: 36px;
+  box-shadow: 5px 5px #c3b2ae;
+  margin: 50px;
+  outline: none;
 }
 
-.g-button:hover {background-color: #3e8e41}
+.g-button:hover {
+  background-color: #d6fff6;
+}
 
 .g-button:active {
-  background-color: #3e8e41;
-  box-shadow: 0 5px #666;
+  background-color: #c1e7dd;
+  box-shadow: 0 5px #b7876b;
   transform: translateY(4px);
 }
