--- a/frontend/src/pages/Landing.css
+++ b/frontend/src/pages/Landing.css
@@ -1,16 +1,32 @@
 .Landing {
-  text-align: center;
+  text-align: left;
 }
 
 .Landing-header {
-    background-color: #FDF3D6;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: #EB966F;
-  }
+  background-color: #e27d6b;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
 
-  
+.Landing-header h1 {
+  position: absolute;
+  width: 585px;
+  height: 105px;
+  left: calc(50% - 585px / 2 - 205.5px);
+  top: calc(50% - 105px / 2 - 263.5px);
+  color: white;
+}
+
+.Landing-header p {
+  position: absolute;
+  width: 837px;
+  height: 257px;
+  left: calc(50% - 213px / 2 - 205.5px);
+  top: calc(50% - 268px / 2);
+  text-align: right;
+}
