--- a/frontend/src/components/GenericButton/styles.css
+++ b/frontend/src/components/GenericButton/styles.css
@@ -3,22 +3,22 @@
 .g-button {
   width: 304px;
   height: 82px;
-  color: #e68977;
-  background-color: white;
+  color: #f4f4f4;
+  background-color: #e27d6b;
   border-radius: 25px;
   border: none;
   font-size: 36px;
-  box-shadow: 5px 5px #c3b2ae;
+  box-shadow: 5px 5px #bb5244;
   margin: 50px;
   outline: none;
 }
 
 .g-button:hover {
-  background-color: #d6fff6;
+  background-color: #d17160;
 }
 
 .g-button:active {
-  background-color: #c1e7dd;
-  box-shadow: 0 5px #b7876b;
+  background-color: #c06456;
+  box-shadow: 0 5px;
   transform: translateY(4px);
 }
