--- a/frontend/src/pages/Email/Email.css
+++ b/frontend/src/pages/Email/Email.css
@@ -2,4 +2,7 @@
   flex-direction: column;
   display: flex;
   align-items: center;
+  text-align: center;
+  line-height: 50px;
+  font-size: calc(3px + 2vmin);
 }
