--- a/app/javascript/components/Instructions/Instructions.css
+++ b/app/javascript/components/Instructions/Instructions.css
@@ -1,19 +1,23 @@
 .Instructions {
   text-align: left;
   color: white;
-  background-color: #e27d6b;
+  background-color: #f4f4f4;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
 
 .Instr-header {
-  color: white;
-  background-color: #e27d6b;
+  color: #282828;
+  background-color: #f4f4f4;
   display: flex;
   flex-direction: row;
   font-size: calc(10px + 2vmin);
   line-height: 40px;
+}
+
+.Instr-header h2 {
+  color: #e27d6b;
 }
 
 .Ins-back {
@@ -21,11 +25,11 @@
 }
 
 .Ins-left {
-  padding: 0px 30px 0px 60px;
+  padding: 0px 50px 0px 70px;
   width: 50vw;
 }
 
 .Ins-right {
-  padding: 0px 30px 0px 60px;
+  padding: 0px 70px 0px 50px;
   width: 50vw;
 }
