--- a/app/javascript/components/Landing/Landing.css
+++ b/app/javascript/components/Landing/Landing.css
@@ -1,32 +1,33 @@
 .Landing {
-  text-align: left;
+  text-align: center;
+  overflow: hidden;
 }
 
 .Landing-header {
-  background-color: #e27d6b;
+  background-color: #f3f3f3;
   min-height: 100vh;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .Landing-header h1 {
   position: absolute;
   width: 585px;
   height: 105px;
-  left: calc(50% - 585px / 2 - 205.5px);
-  top: calc(50% - 105px / 2 - 263.5px);
-  color: white;
+  left: calc(50% - 585px / 2 + 0.5px);
+  top: calc(50% - 105px / 2 - 181.5px);
+  color: #e27d6b;
 }
 
 .Landing-header p {
   position: absolute;
   width: 837px;
-  height: 257px;
-  left: calc(50% - 213px / 2 - 205.5px);
-  top: calc(50% - 268px / 2);
-  text-align: right;
+  height: 164px;
+  left: calc(50% - 837px / 2 + 0.5px);
+  top: calc(50% - 164px / 2 - 30px);
+  color: #282828;
+  /* change color here  */
 }
