--- a/app/javascript/components/Players/styles.css
+++ b/app/javascript/components/Players/styles.css
@@ -1,26 +1,19 @@
-.layout {
-  flex-direction: column;
-  display: flex;
-  align-items: center;
-  margin: 60px;
-}
-
-/* .heading {
-    font-size: 75px;
-    text-align: center;
-    margin-bottom: 50px;
-    margin-top: 50px;
+.heading {
+  font-size: 75px;
+  text-align: center;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
 
 .Players {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .buttons {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 50px;
-} */
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
+}
